UF-8372: Changes after review